update(wallet): add option to select if twitter app is installed or not

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -40,7 +40,9 @@
     "tutorial": "Tutorial",
     "learn-more": "learn more",
     "help": "help",
-    "open-app": "Open App"
+    "open-app": "Open App",
+    "yes": "Yes",
+    "no": "No"
   },
   "landing": {
     "section-1": {
@@ -243,9 +245,8 @@
     },
     "prompt-dialog": {
       "heading": "Do you have the Twitter app installed ?",
-      "details": "If yes, please open the app then return to this page and click continue. The app is known to interfere if installed and not active",
-      "cta-button-text": "continue",
-      "cancel-button-text": "cancel"
+      "details": "Please open the app then return to this page and click continue",
+      "cta-button-text": "continue"
     },
     "alerts": {
       "load-error": "Sorry we could not load platforms. If error persists, please contact support",
