--- a/public/locales/fa/translation.json
+++ b/public/locales/fa/translation.json
@@ -40,7 +40,9 @@
     "tutorial": "آموزش",
     "learn-more": "بیشتر بدانید",
     "help": "کمک",
-    "open-app": "اپلیکیشن را باز کن"
+    "open-app": "اپلیکیشن را باز کن",
+    "yes": "آره",
+    "no": "خیر"
   },
   "landing": {
     "section-1": {
@@ -244,9 +246,8 @@
     },
     "prompt-dialog": {
       "heading": "آیا برنامه توییتر را نصب کرده اید؟ ?",
-      "details": "اگر بله، لطفا برنامه را باز کنید، سپس به این صفحه بازگردید و روی ادامه کلیک کنید. این برنامه در صورت نصب و فعال نبودن تداخل دارد",
-      "cta-button-text": "ادامه هید",
-      "cancel-button-text": "لغو"
+      "details": "لطفاً برنامه را باز کنید سپس به این صفحه برگردید و روی ادامه کلیک کنید",
+      "cta-button-text": "ادامه هید"
     },
     "alerts": {
       "load-error": "متأسفیم که نتوانستیم پلتفرم ها را بارگیری کنیم. اگر خطا ادامه داشت، لطفا با پشتیبانی تماس بگیرید",
