feat(user idle detection): detect and logout inactive users, fixes #33 and #60

--- a/public/locales/fa/translation.json
+++ b/public/locales/fa/translation.json
@@ -208,7 +208,6 @@
     },
     "account-status": "قبلاً یک حساب کاربری دارید?",
     "login-link": "ورود",
-
     "code-verification": {
       "alerts": {
         "account-created": "حساب شما ایجاد شده است، لطفا وارد شوید",
@@ -352,7 +351,11 @@
     "join-date": "تاریخ عضویت",
     "last-login": "آخرین ورود",
     "alerts": {
-      "load-error": "متأسفیم نتوانستیم معیارهای شما را پیدا کنیم. اگر خطا ادامه داشت، لطفا با پشتیبانی تماس بگیرید"
+      "load-error": "متأسفیم نتوانستیم معیارهای شما را پیدا کنیم. اگر خطا ادامه داشت، لطفا با پشتیبانی تماس بگیرید",
+      "idle": {
+        "heading": "أنت لا تزال هناك ؟",
+        "details": "سيتم تسجيل خروجك قريبًا لأسباب أمنية"
+      }
     }
   },
   "settings": {
