--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -351,7 +351,11 @@
     "join-date": "Join Date",
     "last-login": "Last Login",
     "alerts": {
-      "load-error": "Sorry we could not locate your metrics. If error persists, please contact support"
+      "load-error": "Sorry we could not locate your metrics. If error persists, please contact support",
+      "idle": {
+        "heading": "Are you still there ?",
+        "details": "You will be logged out soon for security reasons"
+      }
     }
   },
   "settings": {
