--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -351,7 +351,11 @@
     "join-date": "Date d'adhésion",
     "last-login": "Dernière connexion",
     "alerts": {
-      "load-error": "Désolé, nous n'avons pas pu localiser vos métriques. Si l'erreur persiste, veuillez contacter le support"
+      "load-error": "Désolé, nous n'avons pas pu localiser vos métriques. Si l'erreur persiste, veuillez contacter le support",
+      "idle": {
+        "heading": "Vous êtes toujours là ?",
+        "details": "Vous serez bientôt déconnecté pour des raisons de sécurité"
+      }
     }
   },
   "settings": {
