--- a/public/locales/fa/translation.json
+++ b/public/locales/fa/translation.json
@@ -316,13 +316,13 @@
       "details": "لطفا برای ذخیره توکن ها روی لینک زیر کلیک کنید",
       "summary": {
         "caption": "بیشتر بدانید",
-        "details": "همگام سازی تنها پس از انجام عملی که پیکربندی های امنیتی شما را به روز می کند، در دسترس قرار می گیرد. یک مثال ذخیره دسترسی در کیف پول است."
+        "details": "همگام‌سازی تنها پس از انجام عملی که پیکربندی‌های امنیتی خود را به‌روزرسانی می‌کند در دسترس قرار می‌گیرد. یک مثال ذخیره دسترسی در کیف پول است."
       },
       "cta-button-text": "اکنون دسترسی را ذخیره کنید"
     },
     "section-2": {
       "paragraph-1": "این به شما امکان می دهد از دروازه ایمن SW/OB برای همه پیام ها استفاده کنید",
-      "paragraph-2": "همگام سازی تنها پس از انجام عملی که پیکربندی های امنیتی شما را به روز می کند، در دسترس قرار می گیرد. یک مثال ذخیره دسترسی در کیف پول است.",
+      "paragraph-2": "همگام‌سازی تنها پس از انجام عملی که پیکربندی‌های امنیتی خود را به‌روزرسانی می‌کند در دسترس قرار می‌گیرد. یک مثال ذخیره دسترسی در کیف پول است.",
       "status": {
         "heading": "وضعیت",
         "connected": "متصل",
