corrected french typo

--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -230,7 +230,7 @@
     },
     "section-1": {
       "heading": "Plateformes disponibles",
-      "cta-button-text": "Sauvegarder"
+      "cta-button-text": "enregistrer"
     },
     "section-2": {
       "heading": "plates-formes enregistrées",
