translated added text

--- a/public/locales/fa/translation.json
+++ b/public/locales/fa/translation.json
@@ -223,6 +223,9 @@
     "page-title": "ذخیره حساب ها",
     "heading": "ذخیره حساب ها",
     "details": "با استفاده از فناوری OAuth2، حساب‌های خود را به‌طور ایمن در پلتفرم‌هایی که پشتیبانی می‌کنیم پیوند دهید تا بتوانید در زمان آفلاین به برقراری ارتباط با آنها ادامه دهید.",
+    "instructions1": "برای شروع، پلتفرمی را که می‌خواهید به صورت آفلاین با آن ارتباط برقرار کنید انتخاب کنید و روی دکمه ذخیره کلیک کنید.",
+    "instructions2": "اکنون شما با موفقیت توکن های خود را ذخیره کرده اید، روی دکمه همگام سازی زیر کلیک کنید تا با برنامه همگام سازی شود.",
+    "note":"توجه: هر زمان که یک رمز جدید ذخیره می کنید یا یک توکن را لغو می کنید، باید با برنامه خود همگام سازی کنید.",
     "labels": {
       "description": "شرح",
       "how-to-save": "نحوه ذخیره دسترسی"
