--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -53,7 +53,7 @@
     },
     "section-2": {
       "heading": "How it works",
-      "details": "With SMSWithoutBorders, you can send emails, tweet and chat on telegram without an active internet connection. By using our app, you can send messages securely through a network of SMS gateways to stay connected",
+      "details": "With SMSWithoutBorders, you can send emails, tweet and chat on telegram without an active internet connection. By using our andriod app, you can send messages securely through a network of SMS gateways to stay connected",
       "paragraph-1": "By setting up your account while you have an internet connection, you can continue to communicate later using SMS when your no longer have internet access",
       "paragraph-2": "Our SMS gateways are freely available. Learn how to set up yours below",
       "tutorial-1": "Learn how to setup your account and app",
@@ -62,7 +62,7 @@
     },
     "section-3": {
       "heading": "Getting Started with SWOB",
-      "details": "With SMSWithoutBorders, you can send emails, tweet and chat on Telegram without an active internet connection. By using our app, you can send messages securely through a network of SMS gateways to stay connected",
+      "details": "With SMSWithoutBorders, you can send emails, tweet and chat on Telegram without an active internet connection. By using our andriod app, you can send messages securely through a network of SMS gateways to stay connected",
       "steps": {
         "1": {
           "heading": "Signup for an account",
@@ -356,6 +356,20 @@
     "greeting-2": "Welcome",
     "join-date": "Join Date",
     "last-login": "Last Login",
+    "start": "Let's get you started",
+    "label1": "Create an account",
+    "label2": "Link platforms",
+    "label3": "Download App",
+    "label4": "Sync",
+    "description1": "Guessing you already signed/logged in. :)",
+    "description2": "Save access to our available platforms",
+    "description3": "SWOB solely depends on the app, download the app to begin communication",
+    "description4": "Finally sync with your mobile App and start communicating",
+    "continue":"continue",
+    "back":"back",
+    "reset":"reset",
+    "finish":"Finish",
+    "completed":"Congratulations! You have successfully set up your SWOB account 🎉",
     "alerts": {
       "load-error": "Sorry we could not locate your metrics. If error persists, please contact support",
       "idle": {
