Update: Added translation to stepper elements.

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -356,15 +356,15 @@
     "greeting-2": "Welcome",
     "join-date": "Join Date",
     "last-login": "Last Login",
-    "start": "Let's get you started",
+    "start": " Follow these simple steps to get started:",
     "label1": "Create an account",
     "label2": "Link platforms",
     "label3": "Download App",
     "label4": "Sync",
-    "description1": "Guessing you already signed/logged in. :)",
-    "description2": "Save access to our available platforms",
-    "description3": "SWOB solely depends on the app, download the app to begin communication",
-    "description4": "Finally sync with your mobile App and start communicating",
+    "description1": "Sign up celebration :)",
+    "description2": "Connect your accounts on supported platforms in a safe way using OAuth2 technology. This lets you stay in touch with others on those platforms even when you're not online. On the 'Save Accounts' page, select your desired platform and click save.",
+    "description3": " The app is the only platform through which you can access the SWOB’s features and functions, it is designed to provide a seamless user experience.",
+    "description4": "Finally synchronize with your mobile App by clicking the sync button and start communicating",
     "continue":"continue",
     "back":"back",
     "reset":"reset",
