--- a/public/locales/fa/translation.json
+++ b/public/locales/fa/translation.json
@@ -356,6 +356,19 @@
     "greeting-2": "خوش آمدی",
     "join-date": "تاریخ عضویت",
     "last-login": "آخرین ورود",
+    "start": "برای شروع این مراحل ساده را دنبال کنید:",
+    "label1": "ایجاد یک حساب کاربری",
+    "label2": "پلتفرم های پیوند",
+    "label3": "دانلود برنامه",
+    "label4": "همگام سازی",
+    "description2": "حساب های خود را با استفاده از فناوری OAuth2 به روشی ایمن در پلتفرم های پشتیبانی شده وصل کنید. این به شما امکان می دهد حتی زمانی که آنلاین نیستید با دیگران در آن پلتفرم ها در ارتباط باشید. در صفحه ذخیره حساب ها، پلتفرم مورد نظر خود را انتخاب کنید و روی ذخیره کلیک کنید.",
+    "description3": "این برنامه تنها پلتفرمی است که از طریق آن می توانید به ویژگی ها و عملکردهای SWOB دسترسی داشته باشید، این برنامه برای ارائه یک تجربه کاربری یکپارچه طراحی شده است.",
+    "description4": "در نهایت با کلیک بر روی دکمه همگام سازی با برنامه تلفن همراه خود همگام سازی کنید و شروع به برقراری ارتباط کنید",
+    "continue":"ادامه هید",
+    "back":"بازگشت",
+    "reset":"تنظیم مجدد",
+    "finish":"تمام",
+    "completed":"تبریک! شما با موفقیت حساب SWOB خود را راه اندازی کردید 🎉",
     "alerts": {
       "load-error": "متأسفیم نتوانستیم معیارهای شما را پیدا کنیم. اگر خطا ادامه داشت، لطفا با پشتیبانی تماس بگیرید",
       "idle": {
