--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -356,6 +356,19 @@
     "greeting-2": "Bienvenue",
     "join-date": "Date d'adhésion",
     "last-login": "Dernière connexion",
+    "start": " Suivez ces étapes simples pour commencer :",
+    "label1": "Créer un compte",
+    "label2": "Plates-formes de liens",
+    "label3": "Télécharger l'application",
+    "label4": "Synchroniser",
+    "description2": "Connectez vos comptes sur les plates-formes prises en charge de manière sécurisée à l'aide de la technologie OAuth2. Cela vous permet de rester en contact avec d'autres personnes sur ces plates-formes même lorsque vous n'êtes pas en ligne. Sur la page 'Enregistrer les comptes', sélectionnez la plate-forme souhaitée et cliquez sur Enregistrer.",
+    "description3": "L'application est la seule plate-forme à travers laquelle vous pouvez accéder aux fonctionnalités et fonctions du SWOB, elle est conçue pour offrir une expérience utilisateur transparente.",
+    "description4": "Synchronisez enfin avec votre application mobile en cliquant sur le bouton de synchronisation et commencez à communiquer",
+    "continue":"continuer",
+    "back":"dos",
+    "reset":"réinitialiser",
+    "finish":"Finir",
+    "completed":"Toutes nos félicitations! Vous avez configuré avec succès votre compte SWOB 🎉",
     "alerts": {
       "load-error": "Désolé, nous n'avons pas pu localiser vos métriques. Si l'erreur persiste, veuillez contacter le support",
       "idle": {
