Update: Added translation to telegram two steps verification.

--- a/public/locales/fa/translation.json
+++ b/public/locales/fa/translation.json
@@ -276,25 +276,21 @@
     "code-verification": {
       "page-title": "تایید کد تلگرام",
       "alerts": {
-        "no-account": "شما اکانت تلگرام ندارید، لطفا برای ایجاد آن فرم را پر کنید"
+        "two-steps-verification-enabled": "تایید دو مرحله ای در اکانت تلگرام شما فعال است و رمز عبور لازم است، لطفا رمز تایید دو مرحله ای تلگرام خود را وارد کنید"
+
       }
     },
-    "registration": {
-      "page-title": "ثبت نام تلگرام",
-      "heading": "ثبت نام تلگرام",
-      "details": "یک حساب کاربری جدید در تلگرام بسازید",
+    "two-steps-verification": {
+      "page-title": "تایید دو مرحله ای تلگرام",
+      "heading": "تایید دو مرحله ای تلگرام",
+      "paragraph-1": "تایید دو مرحله ای در اکانت تلگرام شما فعال است. لطفا رمز تایید دو مرحله ای تلگرام خود را در قسمت زیر وارد کنید.",
+      "paragraph-2":"لطفاً توجه داشته باشید که برای حفظ حریم خصوصی و امنیت شما، رمز عبور شما توسط SMSWithoutBorders خوانده یا ذخیره نخواهد شد. علاوه بر این، ما به شدت توصیه می کنیم که رمز عبور خود را به طور منظم تغییر دهید تا امنیت حساب خود را بیشتر کنید.",
       "form": {
-        "first-name": {
-          "label": "نام کوچک",
-          "placeholder": "جین",
-          "validation-errors": "لطفا نام خود را وارد کنید"
+        "password": {
+          "label": "رمز تایید دو مرحله ای تلگرام",
+          "validation-error": "لطفا رمز تایید دو مرحله ای تلگرام خود را وارد کنید"
         },
-        "last-name": {
-          "label": "نام خانوادگی",
-          "placeholder": "گوزن",
-          "validation-errors": "لطفا نام خانوادگی خود را وارد کنید"
-        },
-        "cta-button-text": "ایجاد حساب کاربری"
+        "cta-button-text": "تأیید کنید"
       }
     }
   },
