added translation to stronger password policy

--- a/public/locales/fa/translation.json
+++ b/public/locales/fa/translation.json
@@ -492,7 +492,12 @@
       "validation-errors": {
         "min": "رمز عبور باید حداقل 8 کاراکتر باشد",
         "required": "رمز عبور مورد نیاز است",
-        "required-new": "لطفا رمز عبور جدید را وارد کنید"
+        "required-new": "لطفا رمز عبور جدید را وارد کنید",
+        "lowercase-letters": "رمز عبور باید حداقل یک حرف کوچک داشته باشد",
+        "uppercase-letters":  "رمز عبور باید حداقل دارای یک حرف بزرگ باشد",
+        "numbers": "رمز عبور باید حداقل شامل یک عدد باشد",
+        "special-characters": "رمز عبور باید حداقل یکی از نویسه های ویژه زیر را داشته باشد: !@#$%^&*()_+-=",
+        "no-compromised-password": "گذرواژه قبلاً به دلیل نقض داده در معرض خطر قرار گرفته است. از رمز عبور دیگری استفاده کنید"
       }
     },
     "confirm-password": {
