update: updated telegram two step verfication message

--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -269,7 +269,7 @@
       "details": "Veuillez indiquer votre numéro de téléphone pour commencer",
       "logo-alt-text": "logo du Telegram",
       "alerts": {
-        "code-sent": "Un code de vérification a été envoyé sur votre téléphone. Vérifiez le code dans votre boîte de réception de sms ou d'email.",
+        "code-sent": "Un code de vérification a été envoyé sur votre Telegram. Vérifiez le code dans votre boîte de réception de sms ou d'email.",
         "authorization-error": "Désolé, vous n'êtes pas autorisé à faire cette demande."
       }
     },
@@ -296,7 +296,7 @@
   "code-verification": {
     "page-title": "Vérifier votre compte",
     "heading": "Vérification",
-    "paragraph-1": "Un code de vérification a été envoyé sur votre téléphone. Veuillez le saisir ci-dessous. Ce processus confirme que le numéro fourni est actif et peut être utilisé pour communiquer le moment venu.",
+    "paragraph-1": "Un code de vérification a été envoyé sur votre Telegram. Veuillez le saisir ci-dessous. Ce processus confirme que le numéro fourni est actif et peut être utilisé pour communiquer le moment venu.",
     "paragraph-2": "Nous vous demandons également de fournir le code qui vous a été envoyé par SMS afin de garantir que vous disposez des droits (propres) nécessaires sur le numéro de téléphone requis. Cela nous aidera à empêcher les acteurs d'utiliser des numéros de téléphone non consentis pour créer des comptes - empêchant ainsi les propriétaires de continuer à le faire",
     "form": {
       "code": {
