--- a/public/locales/fa/translation.json
+++ b/public/locales/fa/translation.json
@@ -269,7 +269,7 @@
       "details": "لطفا برای شروع شماره تلفن خود را وارد کنید",
       "logo-alt-text": "لوگوی تلگرام",
       "alerts": {
-        "code-sent": "یک کد تایید به تلگرام شما ارسال شده است. کد موجود در پیامک یا صندوق ورودی ایمیل خود را بررسی کنید",
+        "code-sent": "یک کد تایید به تلگرام شما ارسال شده است. کد را در برنامه تلگرام خود بررسی کنید",
         "authorization-error": "با عرض پوزش، شما مجاز به ارائه این درخواست نیستید"
       }
     },
